Error with Group error check

--- a/user_check.yml
+++ b/user_check.yml
@@ -29,12 +29,13 @@
     - name: check if groups already exist or not
       command: wbinfo --group-info {{ item.Groups }}
       register: check_ad_output
-      failed_when: "'WBC_ERR_DOMAIN_NOT_FOUND' in check_ad_output.msg"
+      # failed_when: "'WBC_ERR_DOMAIN_NOT_FOUND' in check_ad_output.msg"
       loop: "{{ user_list.list }}"
 
     - name: Display AD output
       debug:
         msg: "{{ check_ad_output }}"
+  
     
       
 
