ignore_error, changed_when

--- a/user_check.yml
+++ b/user_check.yml
@@ -42,4 +42,4 @@
     - name: Fail if group does not exist in AD
       fail:
         msg: "{{ check_ad_output.stderr }}"
-      when: "'WBC_ERR_DOMAIN_NOT_FOUND' in check_ad_output.stderr"
+      when: "'WBC_ERR_DOMAIN_NOT_FOUND' in check_ad_output.stderr_lines"
