failed_when option intorduced

--- a/user_check.yml
+++ b/user_check.yml
@@ -13,8 +13,8 @@
       command: wbinfo -i {{ item.Username }}
       register: passwd_line
       loop: "{{ user_list.list }}"
-      changed_when: False
-      ignore_errors: True
+      changed_when: false
+      failed_when: passwd_line.stderr != ''
 
     - name: Find full name of user
       shell: "ldapsearch -L -xxx uid={{ item.Username }} | grep ^displayName: | sed 's/displayName: //' | uniq"
@@ -22,23 +22,18 @@
       args:
         warn: false
       loop: "{{ user_list.list }}"
-      changed_when: False
-      ignore_errors: True
+      changed_when: false
+      failed_when: user_fullname.stderr != ''
 
     - name: Display full passwd line
       debug:
         msg: "{{ passwd_line }}"
       loop: "{{ user_list.list }}"
-      changed_when: False
-      ignore_errors: True
+      changed_when: false
 
     - name: check if groups already exist or not
       command: wbinfo --group-info {{ item.Groups }}
       register: check_ad_output
       loop: "{{ user_list.list }}"
-      changed_when: False
-      ignore_errors: True
-
-    - name: Fail if group does not exist in AD
-      debug: var=check_ad_output.stderr_lines
-      when: "'WBC_ERR_DOMAIN_NOT_FOUND' in check_ad_ouput"
+      changed_when: false
+      failed_when: check_ad_output.stderr != ''
