--- a/user_check.yml
+++ b/user_check.yml
@@ -22,6 +22,7 @@
       args:
         warn: false
       loop: "{{ user_list.list }}"
+      become: yes
       changed_when: false
       failed_when: user_fullname.stderr != ''
 
